<resources>
    <string name="app_name">To-Do Compose</string>
    <string name="add_button">Add Button</string>
    <string name="search_text">Search Tasks</string>
    <string name="sort_actions">Sort actions</string>
    <string name="delete_all">Delete all</string>
    <string name="list_screen_title">Tasks</string>
    <string name="search_placeholder">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="close_icon">Close Icon</string>
    <string name="sad_face_icon">Sad Face Icon</string>
    <string name="no_tasks_found">No Tasks Found</string>
    <string name="add_task">Add Task</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="add_task_icon">Add Task</string>
    <string name="close_icon_task">Close Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="update_icon">Update Icon</string>
    <string name="dropdown_arrow_icon">DropDown Arrow Icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_task">Remove \'%1$s\'?</string>
    <string name="delete_task_confirmation">Are you sure you want to remove \'%1$s\'?</string>
    <string name="delete_all_task">Remove All Tasks?</string>
    <string name="delete_all_task_confirmation">Are you sure you want to remove all Tasks? There is no going back after this action</string>
    <string name="todo_app_logo">ToDo App Logo</string>
    <string name="descriptioninputtag">descriptionInputTag</string>
    <string name="titleinputtag">titleInputTag</string>
    <string name="taskslisttitletag">tasksListTitleTag</string>
    <string name="taskdescriptiontag">taskDescriptionTag</string>
    <string name="tasktitletag">taskTitleTag</string>
    <string name="addtaskbuttonformtag">addTaskButtonFormTag</string>
    <string name="editaskbuttonformtag">ediTaskButtonFormTag</string>
    <string name="deletetaskbuttonformtag">deleteTaskButtonFormTag</string>
    <string name="filterbypriorityformtag">filterByPriorityFormTag</string>
    <string name="searchtaskformbuttontag">searchTaskFormButtonTag</string>
    <string name="searchtextfieldtag">searchTextFieldTag</string>
</resources>